--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		
 			<div>↓あなた↓<span id="player"></span></div>
 		
-			<button id="gu"><img src="/img/gu.jpg" height ="80" width="80" /></button>
-			<button id="cho"><img src="/img/cho.jpg" height ="80" width="80" /></button>
-			<button id="pa"><img src="/img/pa.jpg" height ="80" width="80" /></button>	
+			<button id="gu"><img src="https://github.com/altosaex/github_kadai01/blob/main/img/gu.jpg?raw=true" height ="80" width="80" /></button>
+			<button id="cho"><img src="https://github.com/altosaex/github_kadai01/blob/main/img/cho.jpg?raw=true" height ="80" width="80" /></button>
+			<button id="pa"><img src="https://github.com/altosaex/github_kadai01/blob/main/img/pa.jpg?raw=true" height ="80" width="80" /></button>	
 			
 			<p id="result">勝負！</p>
 		</section>
